--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 			.container{
 				display: flex;
 				flex-direction: column;
-				width:70%;
 				font-family: "Kohinoor Devanagari";
 				color: rgb(90, 90, 90);
 				text-align: justify;
+				font-size: 2em;
 			}
 			.center{
 				align-self: center;
