decoration of ebook

--- a/ebooks/सूरज_का_सातवाँ_घोड़ा_धर्मवीर_भारती.html
+++ b/ebooks/सूरज_का_सातवाँ_घोड़ा_धर्मवीर_भारती.html
@@ -16,7 +16,8 @@
 				font-family: "Kohinoor Devanagari";
 				color: rgb(90, 90, 90);
 				text-align: justify;
-				font-size: 2em;
+				font-size: 1.4em;
+				padding-bottom: 100px;
 			}
 			.center{
 				align-self: center;
@@ -39,6 +40,12 @@
 				margin-top: -20px;
 				color: rgb(84, 77, 172);
 			}
+			hr{
+				height:1px; 
+				width:100%; 
+				background-color:gray;
+				margin-bottom: 50px;
+			}
 		</style>
 	</head>
 
@@ -48,7 +55,7 @@
 				<h2>सूरज का सातवाँ घोड़ा </h2>
 				<h5>धर्मवीर भारती</h5>
 			</div>
-				<hr>
+			<hr>
 
 	<p>
 		आगे बढ़ो,<br>
@@ -138,6 +145,7 @@
 	<p>
 		वसंत पंचमी, वि. सं. 2008 - अज्ञेय
 	</p>
+	<hr>
 	<p class="center section">
 		निवेदन
 	</p>
@@ -182,6 +190,8 @@
 	<p>
 		23 फरवरी, 1952
 	</p>
+
+	<hr>
 	<p class="center section">
 		उपोद्घात
 	</p>
@@ -276,6 +286,8 @@
 		फूलों से सजी हुई नहीं है। इसका मुख्य कारण यह है कि ये कहानियाँ माणिक मुल्ला की हैं, मैं तो केवल प्रस्तुतकर्ता हूँ, अत: जैसे उनसे सुनी थीं उन्हें
 		यथासंभव वैसे ही प्रस्तुत करने का प्रयास कर रहा हूँ।
 	</p>
+
+	<hr>
 	<p class="center section-pre">
 		<strong>पहली दोपहर</strong>
 		<strong></strong>
@@ -493,7 +505,7 @@
 	<p>
 		श्याम की बात सुन कर हम लोगों का जी भर आया और धीरे-धीरे हम लोग सो गए।
 	</p>
-	
+	<hr>
 	<p class="center section-pre">
 		<strong>दूसरी दोपहर</strong>
 		<strong></strong>
@@ -781,13 +793,11 @@
 	<p align="right">
 		(यवनिका-पतन)
 	</p>
-	<p class="center">
-		<strong></strong>
-	</p>
+	<hr>
 	<p class="center section-pre">
-		<strong>तीसरी दोपहर</strong>
-		<strong></strong>
+		तीसरी दोपहर
 	</p>
+	<p class="section"></p>
 	<p class="center section-post">
 		शीर्षक माणिक मुल्ला ने नहीं बताया
 	</p>
@@ -1049,6 +1059,8 @@
 	<p>
 		दूर किसी स्टेशन से कोई डाकगाड़ी छूटती है।...
 	</p>
+
+	<hr>
 	<p class="center section-pre">
 		चौथी दोपहर
 	</p>
@@ -1320,6 +1332,8 @@
 		'अच्छा! आप लोग चाहते हैं कि मैं कहानी का घटनाकाल भी चौबीस घंटे रखूँ और उसमें आपको सारा महाभारत और इनसाइक्लोपीडिया भी सुनाऊँ! मैं कैसे जानता था इससे
 		आपको क्या मतलब? हाँ, यह मैं आपको बता दूँ कि यह लीला वही लड़की थी जिसका ब्याह तन्ना से हुआ था और उस दिन शाम को महेसर दलाल उसे देखने आनेवाले थे!'
 	</p>
+
+	<hr>
 	<p class="center section-pre">
 		पाँचवीं दोपहर
 	</p>
@@ -1592,6 +1606,8 @@
 	<p>
 		लोगों का कहना था कि चमन और महेसर ने मिल कर रात को सत्ती का गला घोंट दिया।
 	</p>
+
+	<hr>
 	<p class="center section-pre">
 		छठी दोपहर
 	</p>
@@ -1723,6 +1739,8 @@
 	<p>
 		चीलें... चीलें... चीलें... टिड्डियों की तरह अनगिनत चीलें!
 	</p>
+
+	<hr>
 	<p class="center section-pre">
 		सातवीं दोपहर
 	</p>
