--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <body>
     <main role="main" class="container">
       <h1 class="mt-5">Hello there, I am Amit.</h1>
-      <h3> Here are the links to the ebooks - </h3>
+      <h3 class="mt-5"> E-Books </h3>
       <ul>
         <li>
-          <a href="./सूरज_का_सातवाँ_घोड़ा_धर्मवीर_भारती.html"> सूरज का सातवाँ घोड़ा धर्मवीर भारती </a>
+          <a href="./ebooks/सूरज_का_सातवाँ_घोड़ा_धर्मवीर_भारती.html"> सूरज का सातवाँ घोड़ा - धर्मवीर भारती </a>
         </li>
       </ul>
     </main>
 
     <footer class="container">
-      <p>&copy; Company 2017-2018</p>
+      <!-- <p>&copy; Company 2017-2018</p> -->
     </footer>
 
 
